fixed quality issues